--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -147,7 +147,7 @@ Be sure to return to this page afterwards.
 Jupyter Notebook series
 
 ::: {.f3}
-When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with test supporting test results.
+When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with supporting test results.
 
 ::: {.f5 .nt2 .pl2 .mb4}
 <br>
