--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Finalizing <br>Validation Reports"
-subtitle: "Developer Fundamentals — Module 4 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
+subtitle: "Validator Fundamentals — Module 4 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
   revealjs:
@@ -18,7 +18,7 @@ format:
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
-    output-file: _finalizing-model-documentation.html
+    output-file: _finalizing-validation-reports.html
     search: false
 title-slide-attributes:
   data-background-color: "#083E44"
@@ -34,7 +34,7 @@ _"As a **developer** who has logged tests with the {{< var validmind.developer >
 <br>
 This final module is part of a four-part series:
 <br><br>
-[Developer Fundamentals](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button target="_blank"}
+[Validator Fundamentals](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button target="_blank"}
 :::
 
 
@@ -58,7 +58,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 ### Prerequisite courses
 
-To continue, you need to have been [onboarded](developer-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa code >}} Developer**]{.bubble} role and completed the first three modules of this course:
+To continue, you need to have been [onboarded](developer-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role and completed the first three modules of this course:
 
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
 
