--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Using {{< var vm.product >}} <br>for Model Validation"
-subtitle: "Developer Fundamentals — Module 1 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
+subtitle: "Validator Fundamentals — Module 1 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
   revealjs:
@@ -18,7 +18,7 @@ format:
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
-    output-file: _using-validmind-for-model-development.html
+    output-file: _using-validmind-for-model-validation.html
     search: false
 title-slide-attributes:
   data-background-color: "#083E44"
@@ -28,23 +28,23 @@ skip_preview: true
 
 # Learning objectives {.center}
 
-_"As a **developer** who is new to {{< var vm.product >}}, I want to learn how to register a model in the {{< var validmind.platform >}}, install the {{< var validmind.developer >}} in my local environment, and preview my model's documentation template."_
+_"As a **validator** who is new to {{< var vm.product >}}, I want to learn how to connect to a champion model in the {{< var validmind.platform >}} using the {{< var validmind.developer >}} installed in my local environment, preview the model's validation report template, and review submitted documentation for the model."_
 
 ::: {.tc}
 <br>
 This first module is part of a four-part series:
 <br><br>
-[Developer Fundamentals](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button target="_blank"}
+[Validator Fundamentals](/training/validator-fundamentals/validator-fundamentals-register.qmd){.button target="_blank"}
 :::
 
 
 ## Module 1 — Contents {.center}
 
 ::: {.f2}
-1. [{{< var vm.product >}} for model development](#validmind-for-model-development)
-2. [Register a model in the {{< var validmind.platform >}}](#register-a-model)
-3. [Install the {{< var validmind.developer >}}](#install-the-validmind-library)
-4. [Preview your model's documentation template](#preview-model-documentation)
+1. [{{< var vm.product >}} for model validation](#validmind-for-model-validation)
+2. [Connect to your champion model](#connect-to-a-model)
+3. [Preview your model's validation report template](#preview-validation-report)
+4. [Review submitted model documentation](#review-model-documentation)
 
 :::
 
@@ -58,7 +58,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 ### Registration
 
-To continue, you need to have been [onboarded](developer-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa code >}} Developer**]{.bubble} role.
+To continue, you need to have been [onboarded](developer-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role.
 
 <br>
 
@@ -104,7 +104,7 @@ Be sure to return to this page afterwards.
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
-# ValidMind for model development {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# ValidMind for model validation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable .center}
 
@@ -113,7 +113,7 @@ Be sure to return to this page afterwards.
 Jupyter Notebook series
 
 ::: {.f3}
-When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with test supporting test results.
+These notebooks walk you through how to validate a model using {{< var vm.product >}}, complete with supporting test results attached as evidence to your validation report.
 
 :::
 :::
@@ -121,16 +121,16 @@ When you run these notebooks, they will generate a draft of model documentation 
 ::: {.column width="70%" .bl .pl4 .f3}
 ### {{< var vm.product >}} for model development
 
-Our series of four introductory notebooks for model developers include sample code and how-to information to get you started with {{< var vm.product >}}:
+Our series of four introductory notebooks for model validators include sample code and how-to information to get you started with {{< var vm.product >}}:
 
-1 — [Set up the {{< var validmind.developer >}}](/notebooks/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}<br>
-2 — [Start the model development process](/notebooks/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}<br>
-3 — [Integrate custom tests](/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}<br>
-4 — [Finalize testing and documentation](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}<br>
+1 — [Set up the {{< var validmind.developer >}} for validation](/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}<br>
+2 — [Start the model validation process](/notebooks/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}<br>
+3 — [Developing a potential challenger model](/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}<br>
+4 — [Finalize testing and reporting](/notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}<br>
 <br>
 
 ::: {.f4 .pl3 .pr3 .embed}
-In this first module, we'll run through **1 — Set up the {{< var validmind.developer >}}** together.
+In this first module, we'll run through **1 — Set up the {{< var validmind.developer >}} for validation** together.
 :::
 
 :::
@@ -138,15 +138,18 @@ In this first module, we'll run through **1 — Set up the {{< var validmind.dev
 
 <br>
 
-Let's start our journey with **1 — Set up the {{< var validmind.developer >}}** on the next page. {{< fa hand-point-right >}}
+Let's start our journey with **1 — Set up the {{< var validmind.developer >}} for validation** on the next page. {{< fa hand-point-right >}}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
+
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.html" background-interactive="yes" data-preload="yes"} 
 
 :::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
-**1 — Set up the {{< var validmind.developer >}}**
+**1 — Set up the {{< var validmind.developer >}} for validation**
 
 ::: {.f5}
-During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully documented sample model ready for review.
+During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully supported sample validation report ready for review.
 :::
 
 For now, **scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
@@ -155,7 +158,7 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
-# Register a model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Connect to a model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="https://app.prod.validmind.ai" background-interactive="true" data-preload="yes"}
 
@@ -232,7 +235,7 @@ When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
-# Install the ValidMind Library {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Preview validation report {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## Get your code snippet
 
@@ -300,7 +303,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
-# Preview model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Review model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#preview-the-documentation-template" data-preload="yes"}
 
