--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Running Data <br>Quality Tests"
-subtitle: "Developer Fundamentals — Module 2 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
+subtitle: "Validator Fundamentals — Module 2 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
   revealjs:
@@ -18,7 +18,7 @@ format:
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
-    output-file: _learning-to-run-tests.html
+    output-file: _running-data-quality-tests.html
     search: false
 title-slide-attributes:
   data-background-color: "#083E44"
@@ -34,7 +34,7 @@ _"As a **developer** who has registered a model with {{< var vm.product >}}, I w
 <br>
 This second module is part of a four-part series:
 <br><br>
-[Developer Fundamentals](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button target="_blank"}
+[Validator Fundamentals](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button target="_blank"}
 :::
 
 
@@ -59,7 +59,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 ### Prerequisite course
 
-To continue, you need to have been [onboarded](developer-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa code >}} Developer**]{.bubble} role and completed the first module of this course:
+To continue, you need to have been [onboarded](developer-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role and completed the first module of this course:
 
 ::: {.tc}
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
@@ -116,7 +116,7 @@ Be sure to return to this page afterwards.
 Jupyter Notebook series
 
 ::: {.f3}
-When you run these notebooks, they will generate a draft of model documentation and upload it to {{< var vm.product >}}, complete with test supporting test results.
+These notebooks walk you through how to validate a model using {{< var vm.product >}}, complete with supporting test results attached as evidence to your validation report.
 
 ::: {.f5 .nt2 .pl2 .mb4}
 <br>
@@ -129,12 +129,12 @@ You will need to have already completed **1 — Set up the {{< var validmind.dev
 ::: {.column width="70%" .bl .pl4 .f3}
 ### {{< var vm.product >}} for model development
 
-Our series of four introductory notebooks for model developers include sample code and how-to information to get you started with {{< var vm.product >}}:
+Our series of four introductory notebooks for model validators include sample code and how-to information to get you started with {{< var vm.product >}}:
 
-1 — [Set up the {{< var validmind.developer >}}](/notebooks/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}<br>
-2 — [Start the model development process](/notebooks/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}<br>
-3 — [Integrate custom tests](/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}<br>
-4 — [Finalize testing and documentation](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}<br>
+1 — [Set up the {{< var validmind.developer >}} for validation](/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}<br>
+2 — [Start the model validation process](/notebooks/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}<br>
+3 — [Developing a potential challenger model](/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}<br>
+4 — [Finalize testing and reporting](/notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}<br>
 <br>
 
 ::: {.f4 .pl3 .pr3 .embed}
