--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -172,7 +172,7 @@ From here, you can:
 ::: {.f5 .pl3 .pr3 .embed}
 **Can't load the {{< var validmind.platform >}}?**
 
-Make sure you're logged in and have <br>refreshed the page.
+Make sure you're logged in and have refreshed <br>the page in a Chromium-based browser.
 :::
 
 When you're done navigating around, 
