--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -168,14 +168,14 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 From here, you can:
 
 - Keep track of your models in the <br>customizable inventory ...
-- Review and edit model documentation <br>generated via the {{< var validmind.developer >}} ...
-- Collaborate with model validators <br>to get your model approved ...
+- Review model documentation <br> submitted by model developers ...
+- Assess the compliance of models by <br>logging findings and test results as <br>evidence on validation reports ...
 - ... and much more!
 
 ::: {.f5 .pl3 .pr3 .embed}
 **Can't load the {{< var validmind.platform >}}?**
 
-Make sure you're logged in and have <br>refreshed the page.
+Make sure you're logged in and have refreshed<br> the page in a Chromium-based browser.
 :::
 
 When you're done navigating around, 
@@ -186,7 +186,7 @@ When you're done navigating around,
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f4 .mv5 .nr5 .pa4 .overlay}
+:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
 **Welcome to the model inventory**
 
 Use the model inventory to track <br>
@@ -197,15 +197,23 @@ The model inventory is customizable <br>
 and extensible, with a layout that <br>
 can be configured to suit your needs.
 
-::: {.f5 .pl3 .pr3 .embed}
-To start the documentation process, <br>
-a model must already be registered <br>
-in the model inventory via the <br>
-**+ Register Model** modal.
+::: {.f6 .pl3 .pr3 .embed}
+In a usual model lifecycle, <br>
+a champion model will have been <br>
+independently registered in your <br>
+model inventory and submitted to <br>
+you for validation.
+
+For this training course, <br>
+we'll have you register a dummy model <br>
+via the **+ Register Model** modal <br>
+and assign yourself as the validator <br>
+to familiarize you with the <br>
+{{< var validmind.platform >}} interface.
 :::
 
-**Let's register a model together** on <br>
-the next page. {{< fa hand-point-right >}}
+**Let's register a model together** for use <br>
+with validation on the next page. {{< fa hand-point-right >}}
 
 ::::
 
