--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -240,6 +240,34 @@ When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
+**Assign validator credentials**
+
+replace me
+
+::: {.f6 .pl3 .pr3 .embed}
+In a usual model lifecycle, <br>
+a champion model will have been <br>
+independently registered in your <br>
+model inventory and submitted to <br>
+you for validation.
+
+For this training course, <br>
+we'll have you register a dummy model <br>
+via the **+ Register Model** modal <br>
+and assign yourself as the validator <br>
+to familiarize you with the <br>
+{{< var validmind.platform >}} interface.
+:::
+
+**Let's register a model together** for use <br>
+with validation on the next page. {{< fa hand-point-right >}}
+
+::::
+
+
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
