--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -245,8 +245,27 @@ When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
 :::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
 **Assign validator credentials**
 
-replace me
+In order to log tests as a validator <br>
+instead of as a developer, <br>
+we'll need to adjust your <br>
+**model stakeholder** permissions:
 
+1. From the **{{< fa cubes >}} Inventory**, <br>
+select the name the model you registered to <br>
+open up the model details page.
+2. Remove yourself as a developer:
+
+ - Click on the DEVELOPERS tile.
+ - Click the x next to your name to remove yourself from that model's role.
+ - Click Save to apply your changes to that role.
+
+3. Add yourself as a validator:
+
+  - Click on the VALIDATORS tile.
+  - Select your name from the drop-down menu.
+  - Click Save to apply your changes to that role.
+
+<!-- 
 ::: {.f6 .pl3 .pr3 .embed}
 In a usual model lifecycle, <br>
 a champion model will have been <br>
@@ -260,10 +279,9 @@ via the **+ Register Model** modal <br>
 and assign yourself as the validator <br>
 to familiarize you with the <br>
 {{< var validmind.platform >}} interface.
-:::
+::: -->
 
-**Let's register a model together** for use <br>
-with validation on the next page. {{< fa hand-point-right >}}
+When you're done reassigning stakeholder permissions, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
