--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -156,8 +156,6 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ::::
 
-<!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
-
 # Connect to a model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="https://app.prod.validmind.ai" background-interactive="true" data-preload="yes"}
@@ -242,54 +240,24 @@ When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
 **Assign validator credentials**
 
-In order to log tests as a validator <br>
-instead of as a developer, <br>
-we'll need to adjust your <br>
-**model stakeholder** permissions:
+::: {.tl}
+In order to log tests as a validator instead of as a developer, we'll need to adjust your **model stakeholder** permissions:
+:::
 
-1. From the **{{< fa cubes >}} Inventory**, <br>
-select the name the model you registered to <br>
-open up the model details page.
-2. Remove yourself as a developer:
+::: {.f5 .tl}
+1. From the **{{< fa cubes >}} Inventory**, select the name the model you registered to open up the model details page.
+2. Remove yourself as a developer by clicking on the **[developers]{.smallcaps}** tile, then clicking on the **x** next to your name.<br>
+  Click **Save** to apply your changes to that role.
 
- - Click on the DEVELOPERS tile.
- - Click the x next to your name to remove yourself from that model's role.
- - Click Save to apply your changes to that role.
+3. Add yourself as a validator by clicking on the [validators]{.smallcaps} tile, and selecting your name from the drop-down menu.<br>
+  Click **Save** to apply your changes to that role.
 
-3. Add yourself as a validator:
-
-  - Click on the VALIDATORS tile.
-  - Select your name from the drop-down menu.
-  - Click Save to apply your changes to that role.
-
-<!-- 
-::: {.f6 .pl3 .pr3 .embed}
-In a usual model lifecycle, <br>
-a champion model will have been <br>
-independently registered in your <br>
-model inventory and submitted to <br>
-you for validation.
-
-For this training course, <br>
-we'll have you register a dummy model <br>
-via the **+ Register Model** modal <br>
-and assign yourself as the validator <br>
-to familiarize you with the <br>
-{{< var validmind.platform >}} interface.
-::: -->
-
-When you're done reassigning stakeholder permissions, click [{{< fa chevron-right >}}]() to continue.
+:::
 
 ::::
-
-
-
-<!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
-
-# Preview validation report {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## Get your code snippet
 
@@ -316,7 +284,7 @@ When you're done reassigning stakeholder permissions, click [{{< fa chevron-righ
 ::: {.column width="20%" .f4}
 
 ::: {.f5}
-{{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
+{{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your validation environment:
 
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
@@ -337,7 +305,9 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 :::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#install-the-validmind-library" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.html#install-the-validmind-library" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Install & initialize the {{< var validmind.developer >}}**
@@ -345,8 +315,8 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 ::: {.f5}
 With your code snippet copied to your clipboard:
 
-1. Open **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
-2. Run all the cells in the sections under **Initializing the {{< var validmind.developer >}}**.
+1. Open **1 — Set up the {{< var validmind.developer >}} for validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}
+2. Run all the cells under the sections: **Install the {{< var validmind.developer >}}** / **Initialize the {{< var validmind.developer >}}**
 
 :::
 
@@ -354,20 +324,19 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
+# Preview validation report {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-<!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
+<!-- CHANGE THIS TO EXECUTED LATER -->
 
-# Review model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
-## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#preview-the-documentation-template" data-preload="yes"}
+## {background-iframe="/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.html#preview-the-validation-report-template" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
-**Preview the documentation template**
+**Preview the validation report template**
 
 ::: {.f5}
-You can preview your model's documentation template right from the {{< var validmind.developer >}}:
+You can preview your model's validation report template right from the {{< var validmind.developer >}}:
 
-1. Continue with **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
+1. Continue with **1 — Set up the {{< var validmind.developer >}} for validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}
 2.  Run all the cells in the sections under **Getting to know ValidMind**.
 
 :::
@@ -379,20 +348,24 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
 :::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
-**Verify the documentation template**
+**Verify the report template**
 
 ::: {.f5}
 Once you've called `preview_template()`:
 
 1. From the model inventory, select the name of your model to open up the model details page.
-2. On the left sidebar that appears for your model, click **Documentation**.
-3. Note how the structure of the model documentation reflects the previewed template.
+2. On the left sidebar that appears for your model, click **Validation Report**.
+3. Note how the structure of the validation report reflects the previewed template.
 
 :::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
+
+# Review model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+placeholder
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
