--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -402,7 +402,7 @@ With the test results logged, let's head to the model we connected to at the beg
 
 1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
 
-2. In the left sidebar that appears for your model, click **Documentation**.
+2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 
 3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 
