--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -328,7 +328,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Once you've called `preview_template()`:
 
 1. From the model inventory, select the name of your model to open up the model details page.
-2. On the left sidebar that appears for your model, click **Documentation**.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Note how the structure of the model documentation reflects the previewed template.
 
 :::
