Validator Module 1 draft

--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -161,7 +161,7 @@ From the {{< var validmind.platform >}}:
 
 ::: {.f5}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **Documentation**.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Click into any section of the documentation to review the test results logged via the {{< var validmind.developer >}}. <br>
   For example: **2.3 Correlations and Interactions** / **3.2 Model Evaluation**
 
@@ -226,7 +226,7 @@ For example:
 
 ::: {.f5}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **Documentation**.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Click into any section of the documentation to add or edit a content block.
 
 :::
@@ -331,7 +331,7 @@ Comment threads
 
 ::: {.f5}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **Documentation**.
+2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. **In the content block you added earlier:** Post a comment, reply to it, and then resolve the thread.
 
 :::
@@ -374,7 +374,7 @@ Track changes & updates
 
 ::: {.f5}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **Model Activity**.
+2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
 3. Filter the following activity: **Comments** | **Status Updates** | **Model Updates** | **Test Results**
 
 :::
