--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -184,7 +184,7 @@ When you're done navigating around,
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
+:::: {.fr .f4 .nr5 .pa4 .overlay}
 **Welcome to the model inventory**
 
 Use the model inventory to track <br>
@@ -195,7 +195,7 @@ The model inventory is customizable <br>
 and extensible, with a layout that <br>
 can be configured to suit your needs.
 
-::: {.f6 .pl3 .pr3 .embed}
+::: {.f5 .pl3 .pr3 .embed}
 In a usual model lifecycle, <br>
 a champion model will have been <br>
 independently registered in your <br>
@@ -354,7 +354,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Once you've called `preview_template()`:
 
 1. From the model inventory, select the name of your model to open up the model details page.
-2. On the left sidebar that appears for your model, click **Validation Report**.
+2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 3. Note how the structure of the validation report reflects the previewed template.
 
 :::
@@ -365,7 +365,38 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Review model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-placeholder
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.fr .f4 .nr5 .pa4 .overlay}
+**Explore sample model documentation**
+
+In a usual model lifecycle, a champion model <br>
+will have been submitted to you for validation <br>
+with completed model documentation.
+
+In this next section, we'll review our sample <br>
+model documentation template to familiarize <br>
+you with what the structure of documentation <br>
+could look like when presented to you for review:
+
+::: {.f5 .pl3 .pr3 .embed}
+1. From the **{{< fa cubes >}} Inventory**, select the name of <br>
+your model you registered for this course to <br>
+open up the model details page.
+2. On the left sidebar that appears for your model, <br>
+click **{{< fa book-open >}} Documentation**.
+3. The structure of the model documentation reflects <br>
+the documentation template applied to the model, <br>
+just like the validation report template.
+
+:::
+
+When you're done taking a look <br>
+around the model documentation, <br>
+click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
