Setup for Module 2

--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -87,13 +87,13 @@ To continue, you need to have been [onboarded](developer-fundamentals-register.q
 :::: {.columns}
 ::: {.column width="60%"}
 ::: {.tc}
-[Using {{< var vm.product >}} for model development](using-validmind-for-model-development.html){.button target="_blank"}
+[Using {{< var vm.product >}} for Model Development](using-validmind-for-model-development.html){.button target="_blank"}
 :::
 
 :::
 ::: {.column width="40%"}
 ::: {.tc}
-[Learning to run tests](learning-to-run-tests.html){.button target="_blank"}
+[Learning to Run Tests](learning-to-run-tests.html){.button target="_blank"}
 :::
 
 :::
