--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -63,7 +63,7 @@ To continue, you need to have been [onboarded](developer-fundamentals-register.q
 
 ::: {.tc}
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Using {{< var vm.product >}} for model development](using-validmind-for-model-development.html){.button target="_blank"}
+[Using {{< var vm.product >}} for Model Development](using-validmind-for-model-development.html){.button target="_blank"}
 :::
 
 :::: {.tc .mt5 .f2 .embed}
