--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -316,7 +316,7 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 With your code snippet copied to your clipboard:
 
 1. Open **1 — Set up the {{< var validmind.developer >}} for validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}
-2. Run all the cells under the sections: **Install the {{< var validmind.developer >}}** / **Initialize the {{< var validmind.developer >}}**
+2. Run all the cells under the Setting up sections: **Install the {{< var validmind.developer >}}** / **Initialize the {{< var validmind.developer >}}**
 
 :::
 
