--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -28,24 +28,24 @@ skip_preview: true
 
 # Learning objectives {.center}
 
-_"As a **developer** who has registered a model with {{< var vm.product >}}, I want to identify relevant tests to run from {{< var vm.product >}}'s test repository, run and log tests for my model, and insert the test results into my model's documentation."_
+_"As a **validator** who has connected to a champion model via the {{< var validmind.developer >}}, I want to identify relevant tests to run from {{< var vm.product >}}'s test repository, run and log data quality tests, and insert the test results into my model's validation report."_
 
 ::: {.tc}
 <br>
 This second module is part of a four-part series:
 <br><br>
-[Validator Fundamentals](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button target="_blank"}
+[Validator Fundamentals](/training/validator-fundamentals/validator-fundamentals-register.qmd){.button target="_blank"}
 :::
 
 
 ## Module 2 — Contents {.center}
 
 ::: {.f2}
-1. [{{< var vm.product >}} for model development](#validmind-for-model-development)
+1. [{{< var vm.product >}} for model validation](#validmind-for-model-validation)
 2. [Explore ValidMind tests](#explore-validmind-tests)
 3. [Run tests with the {{< var validmind.developer >}}](#run-validmind-tests)
 4. [Log tests to the {{< var validmind.platform >}}](#log-validmind-tests)
-5. [Test an existing model](#test-an-existing-model)
+5. [Prepare datasets for model evaluation testing](#prepare-datasets-for-model-evaluation)
 
 :::
 
@@ -63,7 +63,7 @@ To continue, you need to have been [onboarded](developer-fundamentals-register.q
 
 ::: {.tc}
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Using {{< var vm.product >}} for model development](using-validmind-for-model-development.html){.button target="_blank"}
+[Using {{< var vm.product >}} for Model Validation](using-validmind-for-model-validation.html){.button target="_blank"}
 :::
 
 :::: {.tc .mt5 .f2 .embed}
@@ -107,7 +107,7 @@ Be sure to return to this page afterwards.
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
-# ValidMind for model development {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# ValidMind for model validation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable .center}
 
@@ -120,14 +120,14 @@ These notebooks walk you through how to validate a model using {{< var vm.produc
 
 ::: {.f5 .nt2 .pl2 .mb4}
 <br>
-You will need to have already completed **1 — Set up the {{< var validmind.developer >}}** during the first module to proceed.
+You will need to have already completed **1 — Set up the {{< var validmind.developer >}} for validation** during the first module to proceed.
 :::
 
 :::
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-### {{< var vm.product >}} for model development
+### {{< var vm.product >}} for model validation
 
 Our series of four introductory notebooks for model validators include sample code and how-to information to get you started with {{< var vm.product >}}:
 
@@ -138,21 +138,23 @@ Our series of four introductory notebooks for model validators include sample co
 <br>
 
 ::: {.f4 .pl3 .pr3 .embed}
-In this second module, we'll run through **2 — Start the model development process** together. 
+In this second module, we'll run through **2 — Start the model validation process** together. 
 :::
 
 :::
 ::::
 
-Let's continue our journey with **2 — Start the model development process** on the next page. {{< fa hand-point-right >}}
+Let's continue our journey with **2 — Start the model validation process** on the next page. {{< fa hand-point-right >}}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html" background-interactive="yes" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/2-start_validation_process.html" background-interactive="yes" data-preload="yes"}
 
 :::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
-**2 — Start the model development process**
+**2 — Start the model validation process**
 
 ::: {.f5}
-During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully documented sample model ready for review.
+During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully supported sample validation report ready for review.
 
 :::
 
@@ -208,7 +210,7 @@ For now, **scroll through these test descriptions** to explore. When you're done
 ::: {.column width="20%" .f4}
 
 ::: {.f5}
-{{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
+{{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your validation environment:
 
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
@@ -229,7 +231,9 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 :::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-the-validmind-library" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/2-start_validation_process.html#initialize-the-validmind-library" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Connect to your model**
@@ -237,8 +241,27 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 ::: {.f5}
 With your code snippet copied to your clipboard:
 
-1. Open **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cells in the Setting up section: <br>**Initialize the {{< var validmind.developer >}}** / **Import sample dataset**.
+1. Open **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+2. Run the cell in the following Setting up section: **Initialize the {{< var validmind.developer >}}**
+
+:::
+
+When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/2-start_validation_process.html#load-the-sample-dataset" data-preload="yes"}
+
+:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+**Load the sample dataset**
+
+::: {.f5}
+After you've successfully initialized the {{< var validmind.developer >}}, let's import the sample dataset that was used to develop the dummy champion model:
+
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+2. Run the cell in the following section: **Load the sample dataset**
 
 :::
 
@@ -436,7 +459,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ::::
 
 
-# Test an existing model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Prepare datasets for model evaluation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable .center}
 
