Save point module 2

--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -269,25 +269,29 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
+<!-- CHANGE THIS TO EXECUTED LATER -->
 
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#identify-qualitative-tests" data-preload="yes"}
+## {background-iframe="/notebooks/tutorials/model_validation/2-start_validation_process.html#identify-qualitative-tests" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Identify qualitative tests**
 
 ::: {.f5}
-Next, we'll use the [`list_tests()` function](/notebooks/EXECUTED/model_development/1-set_up_validmind.ipynb#explore-available-tests){target="_blank"} to pinpoint tests we want to run:
+<!-- CHANGE THIS TO EXECUTED LATER -->
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run all the cells under the Setting up section: **Identify qualitative tests**
+Next, we'll use the [`list_tests()` function](/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb#explore-available-tests){target="_blank"} to pinpoint tests we want to run:
+
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+2. Run all the cells under the Verifying data quality adjustments section: **Identify qualitative tests**
 
 :::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 ::::
 
+<!-- CHANGE THIS TO EXECUTED LATER -->
 
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-the-validmind-datasets" data-preload="yes"}
+## {background-iframe="/notebooks/tutorials/model_validation/2-start_validation_process.html#initialize-the-validmind-datasets" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Initialize {{< var vm.product >}} datasets**
@@ -295,8 +299,8 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Then, we'll use the [`init_dataset()` function](/validmind/validmind.qmd#init_dataset){target="_blank"} to connect the sample data with a {{< var vm.product >}} `Dataset` object in preparation for running tests:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cell in the Setting up section: **Initialize the {{< var vm.product >}} datasets**
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+2. Run the following cell in the Verifying data quality adjustments section: **Initialize the {{< var vm.product >}} datasets**
 
 :::
 
